--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
+  padding-top: 100px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
 }
 
 .App-link {
@@ -35,4 +36,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+canvas {
+
 }
