--- a/src/demo/polygonCanvas.css
+++ b/src/demo/polygonCanvas.css
@@ -9,9 +9,7 @@
 }
 
 .polygonCanvasRealView {
-  /* position: absolute;
-  top: 0;
-  left: 0; */
+  position: relative;
 }
 
 .active {
@@ -19,3 +17,8 @@
   color: #fff;
 }
 
+
+/* .lower-canvas {
+  background: url(https://i.ibb.co/cXKy30V/Rectangle-139.png) no-repeat;
+  background-size: contain;
+} */
