feat: add other demo

--- a/src/demo/polygonCanvas.css
+++ b/src/demo/polygonCanvas.css
@@ -18,7 +18,7 @@
 }
 
 
-/* .lower-canvas {
+.lower-canvas {
   background: url(https://i.ibb.co/cXKy30V/Rectangle-139.png) no-repeat;
   background-size: contain;
-} */
+}
