--- a/src/demo/polygonCanvas.css
+++ b/src/demo/polygonCanvas.css
@@ -22,3 +22,11 @@
   background: url(https://i.ibb.co/cXKy30V/Rectangle-139.png) no-repeat;
   background-size: contain;
 }
+
+.drag-action span {
+  display: inline-block;
+  background-color: #000;
+  color: #fff;
+  padding: 10px;
+  margin: 10px;
+}
