--- a/src/demo/polygonCanvas.css
+++ b/src/demo/polygonCanvas.css
@@ -1,9 +1,14 @@
-
-
 .container {
   position: relative;
+  display: flex;
 }
-.polygonCanvasView, .polygonCanvasRealView {
+
+ul {
+  list-style: none;
+}
+
+.polygonCanvasView,
+.polygonCanvasRealView {
 
   border: solid 1px red;
 }
@@ -31,4 +36,44 @@
   margin: 5px;
   cursor: pointer;
   user-select: none;
+}
+
+.group {
+  display: flex;
+  margin: 0;
+  margin-bottom: 8px;
+}
+
+h2 {
+  padding: 0;
+  margin: 0;
+}
+
+.group-item {
+  width: 96px;
+  height: 48px;
+  margin: 0 8px 8px 0;
+  text-align: center;
+  line-height: 48px;
+  background: #141519;
+  box-shadow: 0px 1px 2px rgba(20, 21, 25, 0.6);
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  user-select: none;
+  letter-spacing: 0.1px;
+  font-size: 12px;
+}
+
+.group-item-disabled {
+  cursor: no-drop;
+}
+
+.select-view {
+  width: 200px;
+  height: 40px;
+}
+
+.button {
+  height: 40px;
 }
