--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,9 @@
 .App-header {
   background-color: #fff;
   min-height: 100vh;
-  padding-top: 100px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
 
 }
